Bug 1683075 [Linux] Draw PIP window without decorations and use custom resizers, r=jhorak

- This patch is based on patches created by Andrew Comminos [:acomminos] at But 1283299.
- Draw PIP window without decoration so we don't have to deal with different Gtk themes
  and rounded corners.
- Handle window resize on our own as undecorated windows can't be resized by Gtk.

Differential Revision: https://phabricator.services.mozilla.com/D103038